--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -6,26 +6,14 @@
         {
             "name": "English",
             "id": "en",
-            "flagUrl": "images/flags/en-us.png",
+            "flagUrl": "images/flags/en-uk.png",
             "default": true
         },
 
         {
-            "name": "Español",
+            "name": "Montenegrin",
             "id": "es",
-            "flagUrl": "images/flags/es.png"
-        },
-
-        {
-            "name": "Français",
-            "id": "fr",
-            "flagUrl": "images/flags/fr.png"
-        },
-
-        {
-            "name": "中文",
-            "id": "zh",
-            "flagUrl": "images/flags/zh.png"
+            "flagUrl": "images/flags/me.png"
         }
     ]
 }
